# SearchEyes

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: tool_config.yaml
data/: vissearch_bench.json  vissearch_bench.jsonl
data/tasks/: rag_tasks.jsonl  research_tasks_v2.jsonl  task_generation_report.md  task_verification_results.json  visual_research_tasks.jsonl  visual_tasks.jsonl  visual_tasks_skill_driven.jsonl
experiments/: motivation_experiment.py
experiments/vision_deepresearch/: README.md  caption_bridge.py  config.py  crop_engine.py  metrics.py  query_transform.py  retrieval_adapters.py  run_ablation.py  summarize_results.py
scripts/data_processing/: build_chroma_from_meta.py  build_chroma_index.py  build_chroma_index_v2.py  build_style_repository.py  build_wit_kb_text.py  (+15 more)
searcheyes/: agent_loop.py  bench_export.py  component_extractor.py  component_library.py  delta_world_model.py  embedding_model.py  embedding_server.py  golden_tasks_v2.py  hapo.py  harvester.py  kb_search_tool.py  local_model_server.py  multimodal_rag.py  pgkc_filter.py  pgkc_graph.py  pgkc_llm_rewriter.py  pgkc_pipeline.py  pgkc_synthesizer.py  query_rewriter.py  rag_engine.py  rag_reward.py  research_contracts.py  reward_fn.py  rl_adapter.py  screen_ir.py  search_controller.py  sft_synthesis.py  skill_system.py  state_diff.py  style_repository.py  task_generator.py  task_proposer.py  task_schema.py  task_verifier.py  template_renderer.py  transition_engine.py  validator.py  vdr_agent.py  vdr_tools.py  visual_research_tasks.py  (+4 more)
tests/: test_runtime_resolution.py
(+36 files in other folders)
